apps/tui/src/snapshots/kommand0__key_tests__snapshot_add_repo_modal.snap
---
source: apps/tui/src/main.rs
expression: "render_to_string(&mut app, 100, 30)"
---
┌ Repos ────────────────── + ┐┌ Repo: alpha ───────────────────────────────────────────────────────┐
│› alpha                  ✕ +││Name: alpha                                                         │
│› beta                   ✕ +││Path: /tmp/alpha                                                    │
│                            ││Workspaces: 1 active, 1 total                                       │
│                            ││                                                                    │
│                            ││[Clean up branches]                                                 │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                        ┌ Add Repository ────────────────────────────────┐                        │
│                        │ Repository path:                               │                        │
│                        │                                                │                        │
│                        │ /some/path█                                    │                        │
│                        │                                                │                        │
│                        │                                                │                        │
│                        │                                                │                        │
│                        │ Enter: submit  Tab: complete  Esc: cancel      │                        │
│                        └────────────────────────────────────────────────┘                        │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
 TREE  alpha  no live sessions                          Enter open · a repo · w ws · ? help · q quit
