apps/tui/src/snapshots/kommand0__key_tests__snapshot_add_workspace_modal.snap
---
source: apps/tui/src/main.rs
expression: "render_to_string(&mut app, 100, 30)"
---
┌ Repos ────────────────── + ┐┌ Repo: alpha ───────────────────────────────────────────────────────┐
│› alpha                  ✕ +││Name: alpha                                                         │
│› beta                   ✕ +││Path: /tmp/alpha                                                    │
│                            ││Workspaces: 1 active, 1 total                                       │
│                            ││                                                                    │
│                            ││[Clean up branches]                                                 │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                     ┌ Add Workspace to demo ──────────────────────────────┐                      │
│                     │ Name/#issue/URL (blank = from branch):              │                      │
│                     │ review                                              │                      │
│                     │ Branch (blank = new):                               │                      │
│                     │ origin/feat/x█                                      │                      │
│                     │                                                     │                      │
│                     │                                                     │                      │
│                     │                                                     │                      │
│                     │                                                     │                      │
│                     │                                                     │                      │
│                     │ Enter: submit  Tab: field  Esc: cancel              │                      │
│                     └─────────────────────────────────────────────────────┘                      │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
 TREE  alpha  no live sessions                          Enter open · a repo · w ws · ? help · q quit
