apps/tui/src/snapshots/kommand0__key_tests__snapshot_narrow_terminal.snap
---
source: apps/tui/src/main.rs
expression: "render_to_string(&mut app, 50, 12)"
---
┌ Repos ─── + ┐┌ Repo: alpha ────────────────────┐
│› alpha      ││Name: alpha                      │
│› beta       ││Path: /tmp/alpha                 │
│             ││Workspaces: 1 active, 1 total    │
│             ││                                 │
│             ││[Clean up branches]              │
│             ││                                 │
│             ││                                 │
│             ││                                 │
│             ││                                 │
└─────────────┘└─────────────────────────────────┘
 TREE Enter open · a repo · w ws · ? help · q quit
