apps/tui/src/snapshots/kommand0__key_tests__snapshot_palette_overlay.snap
---
source: apps/tui/src/main.rs
expression: "render_to_string(&mut app, 100, 30)"
---
┌ Repos ────────────────── + ┐┌ Repo: alpha ───────────────────────────────────────────────────────┐
│› alpha                  ✕ +││Name: alpha                                                         │
│› beta                   ✕ +││Path: /tmp/alpha                                                    │
│                            ││Workspaces: 1 active, 1 total                                       │
│                            ││                                                                    │
│                            ││[Clean up branches]                                                 │
│                   ┌ Command palette ─────────────────────────────────────────┐                   │
│                   │ > █                                                      │                   │
│                   │ ▸ ws-one  —  alpha                                       │                   │
│                   │   Clean up — ws-one  —  alpha                            │                   │
│                   │   Archive — ws-one  —  alpha                             │                   │
│                   │   New session — ws-one  —  alpha                         │                   │
│                   │   New codex — ws-one  —  alpha                           │                   │
│                   │   New gemini — ws-one  —  alpha                          │                   │
│                   │   New opencode — ws-one  —  alpha                        │                   │
│                   │   Clean up branches: alpha  —  repo                      │                   │
│                   │   Clean up branches: beta  —  repo                       │                   │
│                   │   Sort repos by manual order  —  order                   │                   │
│                   │   Sort repos by name (A→Z)  —  order                     │                   │
│                   │   Sort repos by name (Z→A)  —  order                     │                   │
│                   │   Sort repos by date added (oldest first)  —  order      │                   │
│                   │   Sort repos by date added (newest first)  —  order      │                   │
│                   │ Enter run  ↑↓ move  Esc cancel                           │                   │
│                   └──────────────────────────────────────────────────────────┘                   │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
 TREE  alpha  no live sessions                          Enter open · a repo · w ws · ? help · q quit
