apps/tui/src/snapshots/kommand0__key_tests__snapshot_settings_overlay.snap
---
source: apps/tui/src/main.rs
assertion_line: 8940
expression: "render_to_string(&mut app, 100, 30)"
---
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│  > claude_args           --model opus                                                            │
│    claude_bin            (default)                                                               │
│    shell                 (default)                                                               │
│    codex_args            (default)                                                               │
│    codex_bin             (default)                                                               │
│    gemini_args           (default)                                                               │
│    gemini_bin            (default)                                                               │
│    opencode_args         (default)                                                               │
│    opencode_bin          (default)                                                               │
│    notify                (default)                                                               │
│    theme                 (default)                                                               │
│    status_refresh_secs   (default)                                                               │
│    tree_width_pct        (default)                                                               │
│                                                                                                  │
│    keybindings / theme_colors / protected_branches:                                              │
│      edit /home/user/.config/kommand0/config.json                                                │
│                                                                                                  │
│    j/k move · Enter edit · Esc close                                                             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
