apps/tui/src/snapshots/kommand0__key_tests__snapshot_tree_expanded.snap
---
source: apps/tui/src/main.rs
expression: "render_to_string(&mut app, 100, 30)"
---
┌ Repos ────────────────── + ┐┌ Repo: alpha ───────────────────────────────────────────────────────┐
│▾ alpha                  ✕ +││Name: alpha                                                         │
│  ├─ ● ws-one            ▶ ✕││Path: /tmp/alpha                                                    │
│› beta                   ✕ +││Workspaces: 1 active, 1 total                                       │
│                            ││                                                                    │
│                            ││[Clean up branches]                                                 │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
 TREE  alpha  no live sessions                          Enter open · a repo · w ws · ? help · q quit
